Fixed center alignment in iPad

--- a/client/containers/styles/App.scss
+++ b/client/containers/styles/App.scss
@@ -7,6 +7,7 @@
   background: $app-bg-color;
   @include atMedium {
     width: 80%;
+    left: 10%;
   }
 }
 
